I updated the email layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//Dtd HTML 4.0 transitional//EN">
+<html lang="en" xml:lang="en">
 
   <head>
     <!-- All other clients get the webfont reference; some will render the font and others will silently fail to the fallbacks. More on that here: http://stylecampaign.com/blog/2015/02/webfont-support-in-email/ -->
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark">
     <meta name="supported-color-schemes" content="light dark">
+    <meta name="x-apple-disable-message-reformatting">
     <!-- SUBJECT LINE GOES BETWEEN title TAGS BELOW-->
     <title>Helios Productions | Helios Brings Your Products to Light</title>
     <!-- Google tag (gtag.js) -->
@@ -161,7 +162,7 @@
   </div> -->
   <!-- Visually Hidden Preview Text : END -->
 
-  <body style="Margin: 0;">
+  <body style="Margin: 0 auto;">
     <!--BEGIN Pre-text area-->
     <table style="margin: 0px auto; WIDTH: 600px" class="container" role="presentation" border="0" cellSpacing="0"
       cellPadding="0" width="100%" align="center">
@@ -199,7 +200,6 @@
         <td>
           <table class="container" align="center" width="600" border="0" cellspacing="0" cellpadding="0"
             role="presentation">
-
             <!-- Start of Header -->
             <tr>
               <td align="center" style="background-color: #FFFFFF; color:#000000;">
@@ -217,7 +217,7 @@
             <!-- End of Header -->
             <!-- Start of Hero Image -->
             <tr>
-              <td style="background-color: #FFFFFF; padding: 90px 24px 80px 24px;">
+              <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF; padding: 90px 24px 80px 24px;">
                 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tbody>
                     <tr>
@@ -255,12 +255,12 @@
             <!-- End of Hero Image -->
             <!-- Start of Image 1 -->
             <tr>
-              <td>
+              <td align="center">
                 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tr>
                     <td align="center">
                       <a href="https://www.heliosproductions.com/">
-                        <img class="g-img" src="https://i.ibb.co/3p7dTwp/Food-Drink2.jpg"
+                        <img src="https://i.ibb.co/3p7dTwp/Food-Drink2.jpg"
                           alt="Image of 4 drinks and donuts on an orange table"
                           style="display: block;width:100%;max-width: 600px;min-width:100px;height:auto;" width="600"
                           border="0">
@@ -273,21 +273,23 @@
             <!-- End of Image 1 -->
             <!-- Start of Our Work Banner -->
             <tr>
-              <td style="padding:30px 24px;background-color:#FFFFFF;">
+              <td align="center" style="padding:30px 24px;background-color:#FFFFFF;">
                 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tr>
-                    <td style="background-color:#F2F2F2;padding:24px;line-height: 30px;">
+                    <td style="background-color:#FFFFFF;padding:24px;line-height: 30px;">
                       <h2
                         style="text-align: center; font-family: 'Poppins', sans-serif;color: #000000; margin: 10px;font-size: 22px;font-family: 'Poppins', sans-serif;font-weight: 600;">
                         Our Work
                       </h2>
                       <p
                         style="text-align: center;font-size: 18px;font-family: 'Montserrat', sans-serif;font-weight: 400;color: #000000;line-height: 28px;">
-                        We love to let our work speak for itself, so we’ll
-                        keep this short
+                        <span style="color: #6DB597;">We love to let our work speak for itself</span>, so we’ll keep
+                        this
+                        short
                         and sweet. Our team of seasoned photographers, stylists, and other professionals work together
                         to create striking and powerful digital content for some of the biggest names in the business.
-                        No matter your imagery needs, we’ve got you covered.</p>
+                        No matter your imagery needs, we’ve got you covered.
+                      </p>
                     </td>
                   </tr>
                 </table>
@@ -303,22 +305,22 @@
             <!-- End of Divider -->
             <!-- Start of Product Sections -->
             <tr>
-              <td style="padding: 20px 0px;background-color:#FFFFFF;">
-                <table class="container" align="center" width="100%" border="0" cellspacing="0" cellpadding="0"
+              <td align="center" width="600" style="padding: 20px 0px;background-color:#FFFFFF;">
+                <table class="container" align="center" width="600" border="0" cellspacing="0" cellpadding="0"
                   role="presentation">
                   <!-- Start of Product -->
                   <tr>
-                    <td style="background-color: #FFFFFF;">
+                    <td align="center" style="background-color: #FFFFFF;">
                       <table class="col" align="left" width="50%" border="0" cellspacing="0" cellpadding="0"
                         role="presentation" style="padding: 24px;">
                         <tr>
                           <td align="center">
                             <a href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj">
                               <img class="g-img"
-                                style="display: block;width:100%;max-width: 300px;min-width:100px;height:auto;box-shadow: 10px 10px 10px lightgrey;"
+                                style="display: block;width:100%;max-width: 300px;min-width:100px;height:auto;"
                                 width="300" border="0" src="https://i.ibb.co/4N5ZdMp/shoes.jpg"
                                 alt="Image of white with snake skin women's shoes" valign="middle">
-                            </a>
+                            </a>&nbsp;
                             <!-- CTA -->
                             <div><!--[if mso]>
                         <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
@@ -331,7 +333,7 @@
                             Product</center>
                         </v:roundrect>
                         <![endif]--><a href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj"
-                                style="padding:4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Product</a>
+                                style="padding:4px;background-color:#FFFFFF;border:1px solid #393939;border-radius:0px;color:#393939;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Product</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -344,11 +346,10 @@
                         <tr>
                           <td align="center">
                             <a href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89">
-                              <img class="g-img"
-                                style="display: block;width:100%;max-width: 300px;height:auto;box-shadow: 10px 10px 10px lightgrey;"
+                              <img class="g-img" style="display: block;width:100%;max-width: 300px;height:auto;"
                                 width="300" border="0" src="https://i.ibb.co/0yJ3Tg4/Apparel.jpg"
                                 alt="Image of a tall Afrikan woman in a long black dress" valign="middle">
-                            </a>
+                            </a>&nbsp;
                             <!-- CTA -->
                             <div><!--[if mso]>
                         <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
@@ -362,7 +363,7 @@
                         </v:roundrect>
                         <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89"
-                                style="padding: 4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Apparel</a>
+                                style="padding: 4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Apparel</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -377,10 +378,10 @@
                             <a
                               href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-j5py9">
                               <img class="g-img"
-                                style="display: block;width:100%;max-width: 300px;min-width:100px;height:auto;box-shadow: 10px 10px 10px lightgrey;"
+                                style="display: block;width:100%;max-width: 300px;min-width:100px;height:auto;"
                                 width="300" border="0" src="https://i.ibb.co/c6mPtbq/Jewelry.jpg"
                                 alt="Image of white with snake skin women's shoes" valign="middle">
-                            </a>
+                            </a>&nbsp;
                             <!-- CTA -->
                             <div><!--[if mso]>
                         <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
@@ -394,7 +395,7 @@
                         </v:roundrect>
                         <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-j5py9"
-                                style="padding:4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Jewelry</a>
+                                style="padding:4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Jewelry</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -408,11 +409,10 @@
                           <td align="center">
                             <a
                               href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-a2954-d37ns">
-                              <img class="g-img"
-                                style="display: block;width:100%;max-width: 300px;height:auto;box-shadow: 10px 10px 10px lightgrey;"
+                              <img class="g-img" style="display: block;width:100%;max-width: 300px;height:auto;"
                                 width="300" border="0" src="https://i.ibb.co/XDLBCr3/Food-Drink1.jpg"
                                 alt="Image of a tall Afrikan woman in a long black dress" valign="middle">
-                            </a>
+                            </a>&nbsp;
                             <!-- CTA -->
                             <div><!--[if mso]>
                         <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
@@ -427,7 +427,7 @@
                         </v:roundrect>
                         <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-a2954-d37ns"
-                                style="padding: 4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">Food
+                                style="padding: 4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">Food
                                 & Drink</a>
                             </div>
                             <!-- /CTA -->
@@ -436,15 +436,14 @@
                       </table>
                       <!-- End of Food & Drink -->
                       <!-- Start of Lifestyle -->
-                      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
+                      <table width="600" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
                         style="padding: 24px;">
                         <tr>
                           <td align="center">
                             <!-- Desktop Image -->
                             <a
                               href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-ar7wt-hglaw">
-                              <img class="g-img col-ls"
-                                style="display: block;width:100%;max-width: 600px;height:auto;box-shadow: 10px 10px 10px lightgrey;"
+                              <img class="g-img col-ls" style="display: block;width:100%;max-width: 600px;height:auto;"
                                 width="600" border="0" src="https://i.ibb.co/s1576nG/Lifestyle2.jpg"
                                 alt="Image of shelfs and dishes with a chair with aqua painted wall" valign="middle">
                             </a>
@@ -455,7 +454,7 @@
                                 width="600" border="0" src="https://i.ibb.co/K941dZT/Lifestyle1.jpg" alt="food-drink3"
                                 border="0" alt="Image of shelfs and dishes with a chair with aqua painted wall"
                                 valign="middle">
-                            </a>
+                            </a>&nbsp;
                             <!-- CTA -->
                             <div><!--[if mso]>
                         <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
@@ -469,7 +468,7 @@
                         </v:roundrect>
                         <![endif]--><a
                                 href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj-5ze89-f6el4-ar7wt-hglaw"
-                                style="padding:4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 24px;">LifeStyle</a>
+                                style="padding:4px;background-color:#FFFFFF;border:1px solid #000000;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 12px;">LifeStyle</a>
                             </div>
                             <!-- /CTA -->
                           </td>
@@ -499,7 +498,7 @@
                         role="presentation" style="max-width: 600px;background-color: #d9feee;padding:50px 85px;">
                         <tr>
                           <td align="center">
-                            <h2 style="font-size: 26px;font-family: 'Poppins', sans-serif;color: #000000;">Why Helios?!
+                            <h2 style="font-size: 24px;font-family: 'Poppins', sans-serif;color: #000000;">Why Helios?!
                             </h2>
                           </td>
                         </tr>
@@ -557,7 +556,7 @@
             <!-- End of Why Helio? Section -->
             <!-- Start of CTA2 -->
             <tr>
-              <td>
+              <td align="center">
                 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
                   style="padding: 24px;background-color: #FFFFFF; ">
                   <tr>
@@ -573,7 +572,7 @@
                             Started Today!</center>
                         </v:roundrect>
                         <![endif]--><a href="https://www.heliosproductions.com/contact"
-                          style="padding:8px;background-color:#FF8E04;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:22px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:270px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0px;">Get
+                          style="padding:8px;background-color:#FF8E04;border-radius:0px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:500;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0px;">Get
                           Started Today!</a>
                       </div>
                       <!-- /CTA -->
@@ -714,14 +713,12 @@
                     </td>
                   </tr>
                   <!-- End of Helios Logo -->
-
                   <!-- Start of Contact -->
                   <tr>
                     <td>
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
-
                         <tr>
-                          <td align=" center" style="padding:24px 0ox;line-height: 25px;">
+                          <td align="center" style="padding:24px 0ox;line-height: 25px;">
                             <h3
                               style="font-size: 20px;font-family: 'Poppins', sans-serif;font-weight:500;color:#000000;">
                               Contact</h3>
