I added the new hero image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="supported-color-schemes" content="light dark">
     <meta name="x-apple-disable-message-reformatting">
     <!-- SUBJECT LINE GOES BETWEEN title TAGS BELOW-->
-    <title>Helios Productions | Helios Brings Your Products to Light</title>
+    <title>Opulent Origins</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ0FFVTG9R"></script>
     <script>
@@ -110,10 +110,10 @@
         width: 100% !important;
       }
 
-      img.g-img {
+      /* img.g-img {
         max-width: 280px !important;
         width: 100% !important;
-      }
+      } */
 
       .sub-header {
         font-size: 36px !important;
@@ -207,8 +207,8 @@
                 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                   <tr>
                     <td align="center" style="padding:2px;">
-                      <p style="margin:0;font-size: 12px;color: #393939;">Trouble viewing this email? <a
-                          style="font-size: 12px;color:#9a5ee3;text-decoration: underline;"
+                      <p style="margin:0;font-size: 14px;color: #393939;">Trouble viewing this email? <a
+                          style="font-size: 14px;color:#9a5ee3;text-decoration: underline;text-underline-offset:2px;"
                           href="https://heliospro.netlify.app/">View In Browser</a></p>
                     </td>
                   </tr>
@@ -218,46 +218,19 @@
             <!-- End of Header -->
             <!-- Start of Hero Image -->
             <tr>
-              <td align="center" bgcolor="#FFFFFF" valign="middle" height="600"
-                style="background-image: url('https://i.ibb.co/WghGsZ8/ecoms-hero.jpg'); background-position: center center; background-size: cover; background-color: #FFFFFF; text-align: center;">
-                <!--[if gte mso 9]>
-                <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:600px;height:auto;">
-                <v:fill type="tile" src="https://i.ibb.co/WghGsZ8/ecoms-hero.jpg" color="#FFFFFF"/>
-                <v:textbox inset="0,0,0,0">
-                <![endif]-->
-                <div>
-                  <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
-                    <tbody>
-                      <tr>
-                        <td align="center" width="100%"
-                          style=" color: #fff; font-family: arial, sans-serif; font-size: 15px; text-align: center;padding: 0 2em;">
-                          <h3 align="center" class="sub-header"
-                            style="font-weight: 600;font-size: 36px;font-family: 'Poppins', sans-serif;color:#FFFFFF;margin: 0;">
-                            Opulent Origins </h3>
-                          <p align="center"
-                            style="font-weight: 400;font-size: 18px;font-family: 'Poppins', sans-serif;color:#FFFFFF;text-align: center;">
-                            Experience Timeless Elegance and Unparalleled Luxury in Every Treatment</p>
-                          <!-- CTA -->
-                          <div><!--[if mso]>
-                        <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://example.com" style="height:40px;v-text-anchor:middle;width:150px;" arcsize="0%" strokecolor="#1e3650" fillcolor="#ffffff">
-                          <w:anchorlock />
-                          <center style="color:#000000;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:bold;">Shop Now</center>
-                        </v:roundrect> -->
-                            <!-- <![endif]-->
-                            <a class="btn" href="https://www.heliosproductions.com/"
-                              style="padding:4px 0px;background-color:#F2F2F2;border-radius:50px;color:#000000;display:inline-block;font-family: 'Poppins', sans-serif;font-size:20px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:180px;-webkit-text-size-adjust:none;mso-hide:all;">Shop
-                              Now</a>
-                          </div>
-                          <!-- /CTA -->
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!--[if gte mso 9]>
-                </v:textbox>
-                </v:rect>
-                <![endif]-->
+              <td align="center" bgcolor="#FFFFFF" valign="middle">
+                <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <tbody>
+                    <tr>
+                      <td align="center"
+                        style=" color: #fff; font-family: arial, sans-serif; font-size: 15px; text-align: center;">
+                        <a href="#"><img src="https://i.ibb.co/Zx9MPRk/Hero-Image.png" alt="hero image" width="600"
+                            height="" border="0" style="width: 100%; max-width: 100%; height: auto; display: block;"
+                            class=""> </a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </td>
             </tr>
             <!-- spacer -->
@@ -268,42 +241,66 @@
               </td>
             </tr>
             <tr>
-              <!-- End of Hero Image -->
-            <tr>
-              <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;padding: 1em;"">
-                <table align=" center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
-            <tr>
-              <td align="center" width="33.33%">
-                <img style="border-radius:50px;" src="https://placehold.co/60x60" alt="">
-                <h2 style="color: #000;font-size: 1.125em;">Loremip</h2>
-                <p style="color: #000;font-size: 1em;">Lorem ipsum dolor sit amet consectetur.</p>
-              </td>
-              <td align="center" width="33.33%">
-                <img style="border-radius:50px;" src="https://placehold.co/60x60" alt="">
-                <h2 style="color: #000;font-size: 1.125em;">Loremip</h2>
-                <p style="color: #000;font-size: 1em;">Lorem ipsum dolor sit amet consectetur.</p>
-              </td>
-              <td align="center" width="33.33%">
-                <img style="border-radius:50px;" src="https://placehold.co/60x60" alt="">
-                <h2 style="color: #000;font-size: 1.125em;">Loremip</h2>
-                <p style="color: #000;font-size: 1em;">Lorem ipsum dolor sit amet consectetur.</p>
+              <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;">
+                <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <tr>
+                    <td align="center" style="padding: 0 8em;">
+                      <h2 align="center"
+                        style="color: #000;font-size: 2em;text-align: center;text-transform: uppercase;Margin: 0;">
+                        LOREM
+                        IPSM DOLOR SIT AMET</h2>
+                    </td>
+                  </tr>
+                </table>
               </td>
             </tr>
-          </table>
-        </td>
-      </tr>
-      <!-- spacer -->
-      <tr>
-        <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="30"
-          style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
-          &nbsp;
-        </td>
-      </tr>
-      <tr>
-        <td align="center" style="background-color: #FFFFFF;">
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
-            <!-- CTA -->
-            <div><!--[if mso]>
+            <!-- End of Hero Image -->
+            <tr>
+              <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;padding: 1em;">
+                <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <tbody>
+                    <tr>
+                      <td align="center" width="33.33%">
+                        <img style="border-radius:50px;" src="https://placehold.co/60x60" alt="">
+                        <h2 style="color: #000;font-size: 1.125em;">Loremip</h2>
+                        <p style="color: #000;font-size: 1em;">Lorem ipsum dolor sit amet consectetur.</p>
+                        <button
+                          style="text-transform: uppercase;text-align: left;background-color: #FFFFFF;color: #000000;border: none; font-weight: 900;">Learn
+                          More</button>
+                      </td>
+                      <td align="center" width="33.33%">
+                        <img style="border-radius:50px;" src="https://placehold.co/60x60" alt="">
+                        <h2 style="color: #000;font-size: 1.125em;">Loremip</h2>
+                        <p style="color: #000;font-size: 1em;">Lorem ipsum dolor sit amet consectetur.</p>
+                        <button
+                          style="text-transform: uppercase;text-align: left;background-color: #FFFFFF;color: #000000;border: none; font-weight: 900;">Learn
+                          More</button>
+                      </td>
+                      <td align="center" width="33.33%">
+                        <img style="border-radius:50px;" src="https://placehold.co/60x60" alt="">
+                        <h2 style="color: #000;font-size: 1.125em;">Loremip</h2>
+                        <p style="color: #000;font-size: 1em;">Lorem ipsum dolor sit amet consectetur.</p>
+                        <button
+                          style="text-transform: uppercase;text-align: left;background-color: #FFFFFF;color: #000000;border: none; font-weight: 900;">Learn
+                          More</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+            <!-- spacer -->
+            <tr>
+              <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="50"
+                style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
+                &nbsp;
+              </td>
+            </tr>
+            <tr>
+              <td align="center" style="background-color: #FFFFFF;">
+                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <!-- CTA -->
+                  <div><!--[if mso]>
               <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
                 xmlns:w="urn:schemas-microsoft-com:office:word" href="http://example.com"
                 style="height:40px;v-text-anchor:middle;width:150px;" arcsize="0%" strokecolor="#1e3650"
@@ -314,55 +311,74 @@
                   Product</center>
               </v:roundrect>
               <![endif]--><a href="https://www.heliosproductions.com/our-work/iduma-website-9msfy-hammj"
-                style="padding:4px;background-color:#c7a9ec;background: rgb(199,169,236);
-                background: linear-gradient(180deg, rgba(199,169,236,1) 0%, rgba(172,106,255,1) 100%);border-radius:50px;color:#FFFFFF;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:270px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0;text-transform: uppercase;">Shop
-                Now</a>
-            </div>
-            <!-- /CTA -->
-          </table>
-        </td>
-      </tr>
-      <!-- spacer -->
-      <tr>
-        <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="40"
-          style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
-          &nbsp;
-        </td>
-      </tr>
-      <!-- Start of Image 1 -->
-      <tr>
-        <td align="center">
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
-            <tr>
-              <td align="center">
-                <a href="https://www.heliosproductions.com/">
-                  <img src="https://i.ibb.co/6mvWTv5/coms-image-2.jpg"
-                    alt="Image of 4 drinks and donuts on an orange table"
-                    style="display: block;width:100%;max-width: 100%;min-width:100px;height:auto;" width="600"
-                    border="0">
-                </a>
+                      style="padding:4px;background-color:#9772C6;border-radius:50px;color:#FFFFFF;display:inline-block;font-family: 'Poppins', sans-serif;font-size:18px;font-weight:400;line-height:40px;text-align:center;text-decoration:none;width:320px;-webkit-text-size-adjust:none;mso-hide:all;margin-top: 0;text-transform: uppercase;">Shop
+                      Now</a>
+                  </div>
+                  <!-- /CTA -->
+                </table>
               </td>
             </tr>
-          </table>
-        </td>
-      </tr>
-      <!-- End of Image 1 -->
-      <!-- Start of Our Work Banner -->
-      <tr>
-        <td align="center" style="padding:30px 24px;background-color:#FFFFFF;">
-          <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+            <!-- spacer -->
             <tr>
-              <td style="background-color:#FFFFFF;padding:24px;line-height: 30px;">
-                <h2
-                  style="text-align: center; font-family: 'Poppins', sans-serif;color: #393939; margin: 10px;font-size: 22px;font-family: 'Poppins', sans-serif;font-weight: 600;">
-                  Our Work
-                </h2>
-                <p
-                  style="text-align: center;font-size: 18px;font-family: 'Montserrat', sans-serif;font-weight: 400;color: #393939;line-height: 28px;">
-                  <span style="color: #811aff;font-weight: 600;">Lorem ipsum, dolor sit</span> amet consectetur
-                  adipisicing elit.
-                  Excepturi cum commodi impedit quaerat voluptates minima optio aliquid quibusdam, omnis quia.
-                </p>
+              <td align="center" bgcolor="#FFFFFF" aria-hidden="true" height="50"
+                style="font-size: 0; line-height: 0px;background-color: #FFFFFF;">
+                &nbsp;
+              </td>
+            </tr>
+            <!-- Start of Image 1 -->
+            <tr>
+              <td align="center">
+                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <tr>
+                    <td align="center">
+                      <a href="https://www.heliosproductions.com/">
+                        <img src="https://i.ibb.co/6mvWTv5/coms-image-2.jpg"
+                          alt="Image of 4 drinks and donuts on an orange table"
+                          style="display: block;width:100%;max-width: 100%;min-width:100px;height:auto;" width="600"
+                          border="0">
+                      </a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- End of Image 1 -->
+            <!-- Start of Our Work Banner -->
+            <tr>
+              <td>
+                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <tr>
+                    <td style="background-color:#FFFFFF;padding:24px;line-height: 30px;">
+                      <h2
+                        style="text-align: center; font-family: 'Poppins', sans-serif;color: #393939; margin: 10px;font-size: 22px;font-family: 'Poppins', sans-serif;font-weight: 600;">
+                        <span style="color: #9772C6;">Lorem ipsum</span> dolor sit amet.
+                      </h2>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td align="center" style="padding:30px 24px;background-color:#FFFFFF;">
+                <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                  <tr>
+                    <td>
+                      <p
+                        style="text-align: left;font-size: 18px;font-family: 'Montserrat', sans-serif;font-weight: 400;color: #393939;line-height: 28px;">
+                        Lorem ipsum, dolor sit amet consectetur
+                        adipisicing elit.
+                        Excepturi cum commodi impedit quaerat voluptates minima optio aliquid quibusdam, omnis quia.
+                      </p>
+                    </td>
+                    <td>
+                      <p
+                        style="text-align: left;font-size: 18px;font-family: 'Montserrat', sans-serif;font-weight: 400;color: #393939;line-height: 28px;">
+                        Lorem ipsum, dolor sit amet consectetur
+                        adipisicing elit.
+                        Excepturi cum commodi impedit quaerat voluptates minima optio aliquid quibusdam, omnis quia.
+                      </p>
+                    </td>
+                  </tr>
               </td>
             </tr>
           </table>
